...
                        <viewControllerLayoutGuide type="bottom" id="fyJ-6I-6Rs"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Yfy-de-0WW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AED STATUS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9jL-lN-tes">
                                <rect key="frame" x="30" y="81" width="315" height="60"/>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="50"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="giS-jA-E8o">
                                <rect key="frame" x="169" y="468" width="42" height="30"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="didTapLogin:" destination="OpG-Kr-7oJ" eventType="touchUpInside" id="rJw-i2-pnL"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t3i-Oq-9bb">
                                <rect key="frame" x="30" y="290" width="315" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uQ4-2b-P5b">
                                <rect key="frame" x="30" y="346" width="315" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                        </subviews>
...
                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                <color key="barTintColor" red="0.0057003595870000002" green="0.43234264849999998" blue="0.73546582459999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <textAttributes key="titleTextAttributes">
                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </textAttributes>
                                <items>
                                    <navigationItem title="Find Defibrillator" id="Hsl-vQ-K65"/>
                                </items>
                            </navigationBar>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="YaS-VZ-W2v">
                                <rect key="frame" x="69" y="147" width="236" height="2"/>
                            </progressView>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCANNING" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhV-a6-MBc">
...
            <point key="canvasLocation" x="980" y="-145.27736131934034"/>
        </scene>
        <!--Saved Events-->
        <scene sceneID="AgJ-bk-JVX">
            <objects>
                <navigationController id="Ju5-hv-zk8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Saved Events" image="Saved" id="fL4-d1-yRZ"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="8gA-s3-l0s">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" red="0.0057003595866262913" green="0.43234264850616455" blue="0.73546582460403442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <textAttributes key="titleTextAttributes">
                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
