...
    /// Attempts to log user in, if fails it will alert the user
    /// - Parameter sender: <#sender description#>
    @IBAction func didTapLogin(_ sender: Any) {
        if isCorrectCredentials() {
            performSegue(withIdentifier: "loginSuccess", sender: nil)
        } else {
            let ac = UIAlertController(title: "Login failed", message: "Invalid Credentials", preferredStyle: .alert)
            ac.addAction(UIAlertAction(title: "OK", style: .default))
            self.present(ac, animated: true)
        }
    }
    
    func textFieldShouldReturn(_ textField: UITextField) -> Bool {
...
